# skillfile

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  clippy.toml  flake.nix  install.sh  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  lib.rs  main.rs  update_check.rs
crates/cli/tests/: cli.rs  functional.rs  init.rs  search.rs
crates/core/: Cargo.toml
crates/core/src/: lock.rs  models.rs  output.rs  parser.rs  patch.rs
crates/deploy/: Cargo.toml
crates/deploy/src/: adapter.rs  install.rs  paths.rs
crates/sources/: Cargo.toml
crates/sources/src/: http.rs  lib.rs  registry.rs  resolver.rs  sync.rs
skillfile/: add.py  cli.py  init.py  install.py  models.py  parser.py  remove.py  resolver.py  sort.py  status.py  sync.py  validate.py
skillfile/commands/: add.py  init.py  remove.py  sort.py  status.py  validate.py
skillfile/core/: conflict.py  parser.py
skillfile/deploy/: adapter.py  install.py  paths.py
skillfile/patch/: diff.py  patch.py  pin.py  resolve.py
skillfile/sources/: resolver.py  strategies.py  sync.py
tests/: Cargo.toml  cli.rs  functional.rs  install_directory_layout.rs  interactive.rs  test_add.py  test_init.py  test_install.py  test_parser.py  test_remove.py  test_resolver.py  test_sort.py  test_status.py  test_sync.py  test_validate.py
tests/functional/: conftest.py  test_install.py  test_pin_unpin.py  test_sync.py
tests/integration/commands/: test_init.py  test_remove.py  (+1 more)
tests/src/: lib.rs
tests/unit/: test_cli.py
(+43 files in other folders)
